# birblog

./: README.md
deploy/: docker-compose.yaml
server/: birblog.toml  pyproject.toml
server/birblog/: api.py  cli.py  config.py  wikidata.py
server/birblog/database/: actions.py  models.py  query.py
