[project]
name = "birblog"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristian Zarebski",email = "krizar312@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sqlmodel (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "click (>=8.1.8,<9.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "wikidspark (>=0.3.0,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "flatdict (>=4.0.1,<5.0.0)",
]

[project.scripts]
birblog="birblog.cli:birblog"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
